[tool.poetry]
name = "tdd-tutorial"
version = "0.1.0"
description = ""
authors = ["okakyo <oka@logly.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-freezegun = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
